clusters/homelab/minio-loki/virtual-service.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: minio-loki-virtualservice
  namespace: minio-loki
spec:
  gateways:
    - istio-ingress/wildcard-gateway
  hosts:
    - minio-loki.${cluster_subdomain}
  http:
    - route:
        - destination:
            host: minio-loki-console.minio-loki.svc.cluster.local
            port:
              number: 9443
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: minio-loki-console
  namespace: minio-loki
spec:
  host: minio-loki-console
  trafficPolicy:
    tls:
      mode: SIMPLE
